--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ input[type=text], [type=date], [type=email], [type=tel], select {
 }
 
 input[type=email] {
-    background: url(images/maaail.png) no-repeat scroll 8px 8px;
+    background: url(../images/maaail.png) no-repeat scroll 8px 8px;
     padding-left: 30px;
     z-index: 9999;
 }
@@ -328,36 +328,10 @@ button {
     animation-iteration-count: infinite;
 }
 
+@media screen and (max-width: 1250px){
+    .pm-logo-box{
+        width: 100%;
+        box-sizing: border-box;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
